--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,4 @@
 baseURL = "https://pdog.no"
 languageCode = "nb"
 title = "Petter Holstad"
-sectionPagesMenu = "ttt"
-
-[[menu.main]]
-    name = "about hugo"
-    pre = "<i class='fa fa-heart'></i>"
-    weight = -110
-    identifier = "about"
-    url = "/about/"
-[[menu.main]]
-    name = "getting started"
-    pre = "<i class='fa fa-road'></i>"
-    weight = -100
-    url = "/getting-started/"
+sectionPagesMenu = "main"
