En rekke redaksjonelle endringer knyttet til innhold på kontaktinformasjonssiden, laget ny CV-side, laget ny backup-side, endret på navbaren fra en lazy blogger-modell til egendefinert modell med dropdowns. Denne commiten gjøres midlertidig for å teste ny funksjonalitet i navbar.

--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,12 @@ baseURL = "https://pdog.no"
 languageCode = "nb"
 defaultContentLanguage = "nb"
 title = "Petter Holstad"
-sectionPagesMenu = "main"
+
+[menu]
+
+  [[menu.main]]
+    identifier = "test"
+    name = "This is the blog section"
+    title = "blog section"
+    url = "/test/"
+    weight = -110
