--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,7 @@ on:
     branches: [ main ]
 
 jobs:
-  # This workflow contains a single job called "lint-markdown"
-  lint-markdown:
+  markdownlint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,6 +25,15 @@ jobs:
       with:
         files: .
         config_file: ".markdownlint.json"
+
+  hugo:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
