--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,7 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
+        ignore:
+          - accept-charset
+          - allow-storage-access-by-user-activation
+          - Section lacks heading
