--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: ['accept-charset', 'allow-storage-access-by-user-activation', 'Section lacks heading']
+        extra: --ignore 'accept-charset' 'allow-storage-access-by-user-activation' 'Section lacks heading'
