--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,12 +47,14 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
+      continue-on-error: true
 
     - name: HTML5 Validator (wrong extra)
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
         extra: --yolo path --fix-all-errors
+      continue-on-error: true
 
     - name: HTML5 Validator
       uses: Cyb3r-Jak3/html5validator-action@master
