--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,11 +53,10 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: --yolo path --fix-all-errors
-      continue-on-error: true
+        extra: --yolo path --fix-all-errors || true
 
     - name: HTML5 Validator
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: --ignore 'accept-charset' 'allow-storage-access-by-user-activation' 'Section lacks heading'
+        extra: --ignore 'accept-charset' 'allow-storage-access-by-user-activation' 'Section lacks heading' || true
