--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: --yolo path --fix-all-errors || html5validator --version
+        extra: --yolo path --fix-all-errors --help || html5validator --version
 
     - name: HTML5 Validator
       uses: Cyb3r-Jak3/html5validator-action@master
