--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,7 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: "--ignore 'allow-storage-access-by-user-activation' 'doc-endnote'"
+        extra: --ignore 'allow-storage-access-by-user-activation' 'doc-endnote' 'Bad value'
+        log_level: DEBUG
+        css: false
+        action_debug: true
