--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,6 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: --ignore 'allow-storage-access-by-user-activation' 'doc-endnote' 'Bad value'
-        log_level: DEBUG
-        css: false
+        extra: >-
+          --ignore 'allow-storage-access-by-user-activation' 'doc-endnote' 'Bad value'
         action_debug: true
