--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,4 @@ jobs:
       uses: Cyb3r-Jak3/html5validator-action@master
       with:
         root: public/
-        extra: >-
-          --ignore 'allow-storage-access-by-user-activation' 'doc-endnote' 'Bad value'
-        action_debug: true
+        extra: --ignore allow-storage-access-by-user-activation doc-endnote
