--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /.vscode/
 .DS_Store
 Icon?
+Ideer til pdog.no.mindnode/contents.xml
+Ideer til pdog.no.mindnode/QuickLook/Preview.jpg
+Ideer til pdog.no.mindnode/style.mindnodestyle/contents.xml
+Ideer til pdog.no.mindnode/style.mindnodestyle/metadata.plist
+Ideer til pdog.no.mindnode/viewState.plist
