Oppretter første utkast av sida

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Ideer til pdog.no.mindnode/QuickLook/Preview.jpg
 Ideer til pdog.no.mindnode/style.mindnodestyle/contents.xml
 Ideer til pdog.no.mindnode/style.mindnodestyle/metadata.plist
 Ideer til pdog.no.mindnode/viewState.plist
+.DS_Store
