Legger inn midlertidig kode for ny forside, men slår av front-end

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Ideer til pdog.no.mindnode/style.mindnodestyle/contents.xml
 Ideer til pdog.no.mindnode/style.mindnodestyle/metadata.plist
 Ideer til pdog.no.mindnode/viewState.plist
 .DS_Store
+.DS_Store
